# rust-poweredup

./: .gitmodules  Cargo.toml  PLAN.md  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/agents/: device-porter.agent.md
.github/hooks/: install-git-hooks.sh  pin-actions-on-save.json
.github/hooks/scripts/: pin-actions-on-save.py
.github/skills/cargo-pin/: SKILL.md
.github/skills/caveman/: SKILL.md
.github/skills/pin-actions-to-sha/: SKILL.md
.github/skills/pin-actions-to-sha/scripts/: pin-actions.py
.github/skills/port-ts-to-rust/: SKILL.md
.github/skills/scaffold-rust-crate/: SKILL.md
.github/workflows/: ci.yml  mirror-from-codeberg.yml  update-submodule.yml
poweredup/: Cargo.toml
poweredup/src/: error.rs  lib.rs  scanner.rs
poweredup/src/ble/: mock.rs  mod.rs
poweredup/src/device/: light.rs  mod.rs
poweredup/src/device/motor/: mod.rs
poweredup/src/device/sensor/: mod.rs
poweredup/src/hub/: mod.rs  port_maps.rs
poweredup/src/protocol/: consts.rs  message.rs  mod.rs  wedo2.rs
