[package]
name = "poweredup"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "=1.51.1", features = ["full"] }
tracing = "=0.1.44"
thiserror = "=2.0.18"
bytes = "=1.11.1"
uuid = { version = "=1.23.0", features = ["v4"] }

# Real BLE hardware (Linux / Raspberry Pi) — only pulled in when feature is enabled
[target.'cfg(target_os = "linux")'.dependencies]
btleplug = { version = "=0.12.0", optional = true }

[features]
hardware-tests = ["btleplug"]

[dev-dependencies]
tokio = { version = "=1.51.1", features = ["full", "test-util"] }
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
